_rendered/apps/teamspeak/service-teamspeak.yaml
# Source: teamspeak/charts/teamspeak/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: teamspeak
  labels:
    helm.sh/chart: teamspeak-4.6.0
    
    custom.network/external-access: ingress
    app.kubernetes.io/name: teamspeak
    app.kubernetes.io/instance: teamspeak
    app.kubernetes.io/version: "3.13.8"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: default-service-endpoint
      protocol: UDP
      port: 9987
      targetPort: 9987
  selector:
    app.kubernetes.io/name: teamspeak
    app.kubernetes.io/instance: teamspeak
